test_suite/alan-2022-examples/failing/005970_mutation.alan
source Z begin leave 6 <> while 25 do relax end 4 end
